<resources>
    <string name="app_name">Memo</string>
    <string name="title_name">备忘录</string>
    <string name="create_button_name">+</string>
    <string name="text_tile">标题：</string>
    <string name="edit_hint">请输入标题</string>
    <string name="button_back">返回</string>
    <string name="button_save">保存</string>
    <string name="edit_body_hint">请输入内容：</string>
    <string name="time_hint">显示时间</string>
    <string name="edit_title_text">新建备忘录</string>
    <string name="upcoming">待办</string>
    <string name="notice">提醒</string>
    <string name="other">其他选项</string>
</resources>
