<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fffff0">

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/edit_title_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:gravity="center"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:id="@+id/edit_title_lay_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edit_title_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:hint="@string/time_hint"/>

            <LinearLayout
                android:id="@+id/edit_title_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tile"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:hint="@string/edit_hint"/>

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/edit_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/button_save"
            android:layout_below="@id/edit_title_lay_lay"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:hint="@string/edit_body_hint"
            android:textSize="12sp"/>
        
        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="#fffff0"
            android:text="@string/button_back"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/menu"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/menu_upcoming"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_toStartOf="@id/menu"
            android:layout_toLeftOf="@id/menu"
            android:layout_alignParentBottom="true"
            android:background="#F0E68C"
            android:text="@string/upcoming"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/menu_notice"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_toRightOf="@id/menu"
            android:layout_toEndOf="@id/menu"
            android:layout_alignParentBottom="true"
            android:background="#F0E68C"
            android:text="@string/notice"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="#fffff0"
            android:text="@string/button_save"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

    </RelativeLayout>

</LinearLayout>